checkpoint: will fix error, tokenized word length != parse length
checkpoint for old functions

--- a/prepare-data-dependency-version1.ipynb
+++ b/prepare-data-dependency-version1.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,21 +175,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"( (S (PP (IN On) (NP (NNP Tuesday))) (NP-TMP (NN afternoon)) (, ,) (NP (NNP Kemper)) (VP (VBD told) (NP  (NP (NNP Bear) (, ,) (NNP Stearns)  (CC &)  (NNP Co.))  (, ,)  (NP  (NP (NNP General) (NNP Electric) (NNP Co.) (POS 's))  (NNP Kidder) (, ,) (NNP Peabody)  (CC &)  (NNP Co.) (NN unit))  (, ,)  (NP (NNP Morgan) (NNP Stanley))  (CC and)  (NP (NNP Oppenheimer)  (CC &)  (NNP Co.))) (SBAR (IN that)  (S  (NP (PRP it))  (VP (MD 'll)  (ADVP (RB no) (RB longer))  (VP (VBP do)   (NP (NN business))   (PP (IN with)   (NP (PRP them)))   (SBAR (IN because)   (S   (PP (IN of)    (NP    (NP (PRP$ their) (NN commitment))    (PP (TO to)    (NP (NN index) (NN arbitrage)))))   (, ,)   (NP    (NP (NNS officials))    (PP (IN inside)    (CC and)    (IN outside)    (NP (DT these) (NNS firms))))   (VP (VBD confirmed))))))))) (. .)))\""
+       "'( (NP (NNP Hopwood) (NNP Inc.) (. .)))'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "sentence = 'Hopwood Inc. Middlesex Water Co. , offering of 150,000 shares of common stock , via Legg Mason Wood Walker Inc. and Howard , Weil , Labouisse ,'\n",
     "constituent_parsing(sentence)"
    ]
   },
