--- a/prepare-parse-n-data.ipynb
+++ b/prepare-parse-n-data.ipynb
@@ -13,7 +13,8 @@
     "import os\n",
     "from stanfordcorenlp import StanfordCoreNLP\n",
     "import re\n",
-    "import json"
+    "import json\n",
+    "import benepar"
    ]
   },
   {
@@ -34,6 +35,7 @@
    "source": [
     "nlp = StanfordCoreNLP(r'/home/pengfei/documents/stanford-corenlp-full-2018-10-05/')\n",
     "tokenizor = en_core_web_sm.load()\n",
+    "parser = benepar.Parser(\"benepar_en2\")\n",
     "DATA_PATH = Path(\"/home/pengfei/data/experiment/\")\n",
     "PDTB_PARSE = 'pdtb-parses.json'\n",
     "PDTB_DATA = 'pdtb-data.json'"
@@ -214,12 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def constituent_parsing(sent):\n",
-    "    return nlp.parse(sent).replace('ROOT', \" \").replace('\\n', '').replace('   ', ' ').replace('  ', ' ')\n",
+    "    return str(parser.parse(sent)).replace('\\n', \" \").replace('   ', ' ').replace('  ', ' ')\n",
     "\n",
     "def dependency_parse(sent):\n",
     "    s = nlp.word_tokenize(sent)\n",
@@ -233,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +265,228 @@
     "            if rel[\"ID\"] == int(arg_id):\n",
     "                rel[linker.split('_')[0]][\"TokenList\"].append(token_list)\n",
     "\n",
-    "def data_generator_per_doc(section, filenumber, relation_id, batch_idx, rawtext):\n",
+    "def data_generator_per_doc_token_level(section, filenumber, relation_id, batch_idx, rawtext):\n",
+    "    \"\"\"generate json format data for one document\n",
+    "    Args:\n",
+    "            section(str): 0~24\n",
+    "            filenumber(str): 0~99\n",
+    "            relation_id(int): relation_id is unique accross every relation, this is start relation_id\n",
+    "            batch_idx(list[int]): list of corresponding int from same file\n",
+    "            rawtext(str): rawtext of that doc, this rawtext is purged of \\n\n",
+    "    Returns:\n",
+    "            pdtb-json\n",
+    "            pdtb-data\n",
+    "    \"\"\"\n",
+    "    # for data\n",
+    "    doc_data, doc_lookup = get_data_prototype(section, filenumber, relation_id, batch_idx)\n",
+    "    doc = tokenizor(rawtext)\n",
+    "    words = get_word_index(doc)\n",
+    "    linkers = get_linker(words, doc_lookup)\n",
+    "    \n",
+    "    # for parse\n",
+    "    sentences = []\n",
+    "    # for each token in document\n",
+    "    for sentence_idx, sentence in enumerate(doc.sents):\n",
+    "        ## TODO: here need to change\n",
+    "        if sentence_idx == 0:\n",
+    "            continue\n",
+    "        else:   \n",
+    "            # begin of the new round\n",
+    "            words = []\n",
+    "            sent = str(sentence)\n",
+    "            dependencies = dependency_parse(sent)\n",
+    "            parsetree = constituent_parsing(sent)\n",
+    "            \n",
+    "            for tok_idx_in_sentence, tok in enumerate(sentence):\n",
+    "                ## 5 attribute of each word\n",
+    "                char_offset_begin = tok.idx\n",
+    "                char_offset_end = tok.idx + len(tok)\n",
+    "                token_offset_in_doc = tok.i\n",
+    "                sentence_offset = sentence_idx\n",
+    "                token_offset_in_sent = tok_idx_in_sentence\n",
+    "\n",
+    "                linker = linkers[token_offset_in_doc]\n",
+    "                token_dict = {'CharacterOffsetBegin': char_offset_begin, \"CharacterOffsetEnd\": char_offset_end, \n",
+    "                              \"PartOfSpeech\": tok.pos_, \"Linkers\": linker}\n",
+    "                words.append([tok.text, token_dict])\n",
+    "\n",
+    "                token_list = [char_offset_begin, char_offset_end, token_offset_in_doc, \n",
+    "                              sentence_offset, token_offset_in_sent]\n",
+    "                add_token_list(doc_data, linker, token_list)\n",
+    "            \n",
+    "            sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \"words\": words})\n",
+    "    return {'sentences': sentences} , doc_data\n",
+    "\n",
+    "            \n",
+    "def data_generator():\n",
+    "    \"\"\"\n",
+    "    Returns:\n",
+    "            docs_parse(dict{docid: parse})\n",
+    "            docs_data(list[relation])\n",
+    "    \"\"\"\n",
+    "    doc_paths = _get_files()\n",
+    "    relation_id = 0\n",
+    "    docs_parse = {}\n",
+    "    docs_data = []\n",
+    "    for doc_path in doc_paths:\n",
+    "        section = doc_path[0]\n",
+    "        filename = doc_path[1]\n",
+    "        print(\"section: \", section, \" filename: \", filename)\n",
+    "        rawtext = read_file(section, filename)\n",
+    "        rawtext = rawtext.replace('\\n', '')\n",
+    "        section = int(section)\n",
+    "        filenumber = int(filename[-2:])\n",
+    "        batch_idx = get_batch(section, filenumber)\n",
+    "        \n",
+    "        doc_parse, doc_data = data_generator_per_doc_token_level(section, filenumber, relation_id, batch_idx, rawtext)\n",
+    "        relation_id += len(batch_idx)\n",
+    "        \n",
+    "        docs_parse[filename] = doc_parse\n",
+    "        docs_data.extend(doc_data)\n",
+    "        \n",
+    "    return docs_parse, docs_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_parse(docs_parse, filename=PDTB_PARSE):\n",
+    "    with open(filename, 'w') as f:\n",
+    "        content = json.dumps(docs_parse)\n",
+    "        f.write(content)\n",
+    "\n",
+    "def write_data(relations, filename=PDTB_DATA):\n",
+    "    with open(filename, 'w') as f:\n",
+    "        for relation in relations:\n",
+    "            content = json.dumps(relation)\n",
+    "            f.write(content)\n",
+    "            f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "section:  01  filename:  wsj_0138\n",
+      "section:  01  filename:  wsj_0139\n",
+      "section:  00  filename:  wsj_0001\n",
+      "section:  00  filename:  wsj_0002\n",
+      "section:  10  filename:  wsj_1001\n",
+      "section:  10  filename:  wsj_1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "docs_parse, docs_data = data_generator()\n",
+    "nlp.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_parse(docs_parse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_data(docs_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Old functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def data_generator_per_doc_sentence_level(section, filenumber, relation_id, batch_idx, rawtext):\n",
+    "    \"\"\"generate json format data for one document\n",
+    "    Args:\n",
+    "            section(str): 0~24\n",
+    "            filenumber(str): 0~99\n",
+    "            relation_id(int): relation_id is unique accross every relation, this is start relation_id\n",
+    "            batch_idx(list[int]): list of corresponding int from same file\n",
+    "            rawtext(str): rawtext of that doc\n",
+    "    Returns:\n",
+    "            pdtb-json\n",
+    "            pdtb-data\n",
+    "    \"\"\"\n",
+    "    # for data\n",
+    "    doc_data, doc_lookup = get_data_prototype(section, filenumber, relation_id, batch_idx)\n",
+    "    doc = tokenizor(rawtext)\n",
+    "    words = get_word_index(doc)\n",
+    "    linkers = get_linker(words, doc_lookup)\n",
+    "    \n",
+    "    # for parse\n",
+    "    sentences = []\n",
+    "    \n",
+    "    sentence_token_offset = 0\n",
+    "    # for each token in document\n",
+    "    for sentence_id, sentence in enumerate(doc.sents):\n",
+    "        if sentence_id == 0:\n",
+    "            continue\n",
+    "        else:\n",
+    "            sent = str(sentence)\n",
+    "                \n",
+    "            # begin of the new round\n",
+    "            words = []\n",
+    "            dependencies = dependency_parse(sent)\n",
+    "            parsetree = constituent_parsing(sent)\n",
+    "            \n",
+    "            sent_char_index = rawtext.index(sent)\n",
+    "\n",
+    "            \n",
+    "            for tok in tokenizor(sent):\n",
+    "                ## 5 attribute of each word\n",
+    "                char_offset_begin = sent_char_index + tok.idx\n",
+    "                char_offset_end = sent_char_index + tok.idx + len(tok)\n",
+    "                token_offset_in_doc = sentence_token_offset + tok.i\n",
+    "                sentence_offset = sentence_id\n",
+    "                token_offset_in_sent = tok.i\n",
+    "                \n",
+    "                linker = linkers[token_offset_in_doc]\n",
+    "                token_dict = {'CharacterOffsetBegin': char_offset_begin, \"CharacterOffsetEnd\": char_offset_end, \n",
+    "                              \"PartOfSpeech\": tok.pos_, \"Linkers\": linker}\n",
+    "                words.append([tok.text, token_dict])\n",
+    "\n",
+    "                token_list = [char_offset_begin, char_offset_end, token_offset_in_doc, \n",
+    "                              sentence_offset, token_offset_in_sent]\n",
+    "                add_token_list(doc_data, linker, token_list)\n",
+    "            \n",
+    "            sentence_token_offset += len(sentence)\n",
+    "            sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \"words\": words})\n",
+    "            \n",
+    "    return {'sentences': sentences} , doc_data\n",
+    "\n",
+    "def data_generator_per_doc_token_level_old(section, filenumber, relation_id, batch_idx, rawtext):\n",
     "    \"\"\"generate json format data for one document\n",
     "    Args:\n",
     "            section(str): 0~24\n",
@@ -324,96 +547,19 @@
     "            add_token_list(doc_data, linker, token_list)\n",
     "            \n",
     "    return {'sentences': sentences} , doc_data\n",
-    "            \n",
-    "def data_generator():\n",
-    "    \"\"\"\n",
-    "    Returns:\n",
-    "            docs_parse(dict{docid: parse})\n",
-    "            docs_data(list[relation])\n",
-    "    \"\"\"\n",
-    "    doc_paths = _get_files()\n",
-    "    relation_id = 0\n",
-    "    docs_parse = {}\n",
-    "    docs_data = []\n",
-    "    for doc_path in doc_paths:\n",
-    "        section = doc_path[0]\n",
-    "        filename = doc_path[1]\n",
-    "        print(\"section: \", section, \" filename: \", filename)\n",
-    "        rawtext = read_file(section, filename)\n",
-    "        \n",
-    "        section = int(section)\n",
-    "        filenumber = int(filename[-2:])\n",
-    "        batch_idx = get_batch(section, filenumber)\n",
-    "        \n",
-    "        doc_parse, doc_data = data_generator_per_doc(section, filenumber, relation_id, batch_idx, rawtext)\n",
-    "        relation_id += len(batch_idx)\n",
-    "        \n",
-    "        docs_parse[filename] = doc_parse\n",
-    "        docs_data.extend(doc_data)\n",
-    "        \n",
-    "    return docs_parse, docs_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_parse(docs_parse, filename=PDTB_PARSE):\n",
-    "    with open(filename, 'w') as f:\n",
-    "        content = json.dumps(docs_parse)\n",
-    "        f.write(content)\n",
     "\n",
-    "def write_data(relations, filename=PDTB_DATA):\n",
-    "    with open(filename, 'w') as f:\n",
-    "        for relation in relations:\n",
-    "            content = json.dumps(relation)\n",
-    "            f.write(content)\n",
-    "            f.write('\\n')"
+    "def constituent_parse_old(sent):\n",
+    "    return nlp.parse(sent).replace('ROOT', \" \").replace('   ', ' ').replace('  ', ' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "section:  01  filename:  wsj_0138\n",
-      "section:  01  filename:  wsj_0139\n",
-      "section:  00  filename:  wsj_0001\n",
-      "section:  00  filename:  wsj_0002\n",
-      "section:  10  filename:  wsj_1001\n",
-      "section:  10  filename:  wsj_1000\n"
-     ]
-    }
-   ],
-   "source": [
-    "docs_parse, docs_data = data_generator()\n",
-    "nlp.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_parse(docs_parse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "write_data(docs_data)"
+    "with open(DATA_PATH/'01'/'wsj_0138') as f:\n",
+    "    rawtext = f.read()"
    ]
   },
   {
@@ -421,7 +567,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "' '.join([o[0] for o in parse_dict[DocID][\"sentences\"][sent_index]['words']])"
+   ]
   }
  ],
  "metadata": {
