fixed the constituent bug error
still have dependency error

--- a/prepare-parse-n-data.ipynb
+++ b/prepare-parse-n-data.ipynb
@@ -14,7 +14,7 @@
     "from stanfordcorenlp import StanfordCoreNLP\n",
     "import re\n",
     "import json\n",
-    "import benepar"
+    "from benepar.spacy_plugin import BeneparComponent"
    ]
   },
   {
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "nlp = StanfordCoreNLP(r'/home/pengfei/documents/stanford-corenlp-full-2018-10-05/')\n",
-    "tokenizor = en_core_web_sm.load()\n",
-    "parser = benepar.Parser(\"benepar_en2\")\n",
+    "tokenizor = spacy.load('en')\n",
+    "tokenizor.add_pipe(BeneparComponent(\"benepar_en2\"))\n",
     "DATA_PATH = Path(\"/home/pengfei/data/experiment/\")\n",
     "PDTB_PARSE = 'pdtb-parses.json'\n",
     "PDTB_DATA = 'pdtb-data.json'"
@@ -216,12 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def constituent_parsing(sent):\n",
-    "    return str(parser.parse(sent)).replace('\\n', \" \").replace('   ', ' ').replace('  ', ' ')\n",
+    "    return str(sent._.parse_string).replace('\\n', \" \").replace('   ', ' ').replace('  ', ' ')\n",
     "\n",
     "def dependency_parse(sent):\n",
     "    s = nlp.word_tokenize(sent)\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
     "            words = []\n",
     "            sent = str(sentence)\n",
     "            dependencies = dependency_parse(sent)\n",
-    "            parsetree = constituent_parsing(sent)\n",
+    "            parsetree = constituent_parsing(sentence)\n",
     "            \n",
     "            for tok_idx_in_sentence, tok in enumerate(sentence):\n",
     "                ## 5 attribute of each word\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,13 +563,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "' '.join([o[0] for o in parse_dict[DocID][\"sentences\"][sent_index]['words']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.START \\n\\nThe following issues were recently filed with the Securities and Exchange Commission: \\n\\nIntermec Corp., offering of 1,050,000 common shares, via Goldman, Sachs & Co. and Piper, Jaffray & Hopwood Inc. \\n\\nMiddlesex Water Co., offering of 150,000 shares of common stock, via Legg Mason Wood Walker Inc. and Howard, Weil, Labouisse, Friedrichs Inc. \\n\\nMidwesco Filter Resources Inc., initial offering of 830,000 common shares, to be offered by the company, via Chicago Corp. \\n\\nNylev Municipal Fund Inc., offering of five million common shares. \\n\\nOccidental Petroleum Corp., shelf offering of $1.5 billion in senior debt securities. \\n\\nPrime Motor Inns Inc., offering of up to $300 million zero coupon convertible debentures, via Drexel Burnham Lambert Inc. and Montgomery Securities. \\n\\nService Fracturing Co., proposed offering of 1.2 million shares of common stock, via Lovett Mitchell Webb & Garrison, Inc., and Blunt Ellis & Loewi Inc. \\n\\nWestern Gas Resources Inc., initial offering of 3,250,000 shares of common stock, of which 3,040,000 shares will be sold by the company and 210,000 shares by a holder, via Prudential-Bache Capital Funding, Smith Barney, Harris Upham & Co., and Hanifen, Imhoff Inc. \\n\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rawtext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = tokenizor(rawtext.replace('\\n', ''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for sent in doc.sents:\n",
+    "    a = str(sent._.parse_string)\n",
+    "    sent = (sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(NP (NP (NNP Loewi) (NNP Inc.) (NNP Western) (NNP Gas) (NNPS Resources) (NNP Inc.)) (, ,) (NP (JJ initial) (NN offering)) (PP (IN of) (NP (NP (NP (CD 3,250,000) (NNS shares)) (PP (IN of) (NP (JJ common) (NN stock)))) (, ,) (SBAR (WHPP (IN of) (WHNP (WDT which))) (S (S (NP (NP (CD 3,040,000) (NNS shares))) (VP (MD will) (VP (VB be) (VP (VBN sold) (PP (IN by) (NP (DT the) (NN company))))))) (CC and) (S (NP (NP (CD 210,000) (NNS shares))) (PP (IN by) (NP (DT a) (NN holder)))))))) (, ,) (PP (IN via) (NP (NNP Prudential) (: -) (NNP Bache) (NNP Capital) (NNP Funding)) (, ,) (NP (NNP Smith) (NNP Barney) (, ,) (NNP Harris) (NNP Upham) (CC &) (NNP Co.)) (, ,) (CC and) (NP (NNP Hanifen) (, ,) (NNP Imhoff))) (. Inc.))'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loewi Inc. Western Gas Resources Inc., initial offering of 3,250,000 shares of common stock, of which 3,040,000 shares will be sold by the company and 210,000 shares by a holder, via Prudential-Bache Capital Funding, Smith Barney, Harris Upham & Co., and Hanifen, Imhoff Inc."
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for tok in sent:\n",
+    "    tok = tok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Inc."
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tok"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'PUNCT'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tok.pos_"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "' '.join([o[0] for o in parse_dict[DocID][\"sentences\"][sent_index]['words']])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
