added converting from txt to csv file

--- a/prepare-parse-n-data.ipynb
+++ b/prepare-parse-n-data.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -408,151 +408,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Old functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def data_generator_per_doc_sentence_level(section, filenumber, relation_id, batch_idx, rawtext):\n",
-    "    \"\"\"generate json format data for one document\n",
-    "    Args:\n",
-    "            section(str): 0~24\n",
-    "            filenumber(str): 0~99\n",
-    "            relation_id(int): relation_id is unique accross every relation, this is start relation_id\n",
-    "            batch_idx(list[int]): list of corresponding int from same file\n",
-    "            rawtext(str): rawtext of that doc\n",
-    "    Returns:\n",
-    "            pdtb-json\n",
-    "            pdtb-data\n",
-    "    \"\"\"\n",
-    "    # for data\n",
-    "    doc_data, doc_lookup = get_data_prototype(section, filenumber, relation_id, batch_idx)\n",
-    "    doc = tokenizor(rawtext)\n",
-    "    words = get_word_index(doc)\n",
-    "    linkers = get_linker(words, doc_lookup)\n",
-    "    \n",
-    "    # for parse\n",
-    "    sentences = []\n",
-    "    \n",
-    "    sentence_token_offset = 0\n",
-    "    # for each token in document\n",
-    "    for sentence_id, sentence in enumerate(doc.sents):\n",
-    "        if sentence_id == 0:\n",
-    "            continue\n",
-    "        else:\n",
-    "            sent = str(sentence)\n",
-    "                \n",
-    "            # begin of the new round\n",
-    "            words = []\n",
-    "            dependencies = dependency_parse(sent)\n",
-    "            parsetree = constituent_parsing(sent)\n",
-    "            \n",
-    "            sent_char_index = rawtext.index(sent)\n",
-    "\n",
-    "            \n",
-    "            for tok in tokenizor(sent):\n",
-    "                ## 5 attribute of each word\n",
-    "                char_offset_begin = sent_char_index + tok.idx\n",
-    "                char_offset_end = sent_char_index + tok.idx + len(tok)\n",
-    "                token_offset_in_doc = sentence_token_offset + tok.i\n",
-    "                sentence_offset = sentence_id\n",
-    "                token_offset_in_sent = tok.i\n",
-    "                \n",
-    "                linker = linkers[token_offset_in_doc]\n",
-    "                token_dict = {'CharacterOffsetBegin': char_offset_begin, \"CharacterOffsetEnd\": char_offset_end, \n",
-    "                              \"PartOfSpeech\": tok.pos_, \"Linkers\": linker}\n",
-    "                words.append([tok.text, token_dict])\n",
-    "\n",
-    "                token_list = [char_offset_begin, char_offset_end, token_offset_in_doc, \n",
-    "                              sentence_offset, token_offset_in_sent]\n",
-    "                add_token_list(doc_data, linker, token_list)\n",
-    "            \n",
-    "            sentence_token_offset += len(sentence)\n",
-    "            sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \"words\": words})\n",
-    "            \n",
-    "    return {'sentences': sentences} , doc_data\n",
-    "\n",
-    "def data_generator_per_doc_token_level_old(section, filenumber, relation_id, batch_idx, rawtext):\n",
-    "    \"\"\"generate json format data for one document\n",
-    "    Args:\n",
-    "            section(str): 0~24\n",
-    "            filenumber(str): 0~99\n",
-    "            relation_id(int): relation_id is unique accross every relation, this is start relation_id\n",
-    "            batch_idx(list[int]): list of corresponding int from same file\n",
-    "            rawtext(str): rawtext of that doc\n",
-    "    Returns:\n",
-    "            pdtb-json\n",
-    "            pdtb-data\n",
-    "    \"\"\"\n",
-    "    # for data\n",
-    "    doc_data, doc_lookup = get_data_prototype(section, filenumber, relation_id, batch_idx)\n",
-    "    doc = tokenizor(rawtext)\n",
-    "    words = get_word_index(doc)\n",
-    "    linkers = get_linker(words, doc_lookup)\n",
-    "    \n",
-    "    # for parse\n",
-    "    temp = None\n",
-    "    first_sent = None\n",
-    "    sentences = []\n",
-    "    # for each token in document\n",
-    "    for tok in doc:\n",
-    "        ## TODO: here need to change\n",
-    "        if temp == None:\n",
-    "            first_sent = str(tok.sent)\n",
-    "            temp = True\n",
-    "            continue\n",
-    "        elif str(tok.sent) == first_sent:\n",
-    "            continue\n",
-    "        else:\n",
-    "            if str(tok.sent) != temp:\n",
-    "                if type(first_sent) != str:# end of the previous round\n",
-    "                    sentences.append({\"dependencies\": dependencies, \"parsetree\": parsetree, \n",
-    "                                      \"words\": words})\n",
-    "                \n",
-    "                # begin of the new round\n",
-    "                words = []\n",
-    "                temp = str(tok.sent)\n",
-    "                first_sent = False\n",
-    "                dependencies = dependency_parse(temp)\n",
-    "                parsetree = constituent_parsing(temp)\n",
-    "            \n",
-    "            ## 5 attribute of each word\n",
-    "            char_offset_begin = tok.idx\n",
-    "            char_offset_end = tok.idx + len(tok)\n",
-    "            token_offset_in_doc = tok.i\n",
-    "            sentence_offset = list(doc.sents).index(tok.sent)\n",
-    "            token_offset_in_sent = list(tok.sent).index(tok)\n",
-    "            \n",
-    "            linker = linkers[token_offset_in_doc]\n",
-    "            token_dict = {'CharacterOffsetBegin': char_offset_begin, \"CharacterOffsetEnd\": char_offset_end, \n",
-    "                          \"PartOfSpeech\": tok.pos_, \"Linkers\": linker}\n",
-    "            words.append([tok.text, token_dict])\n",
-    "            \n",
-    "            token_list = [char_offset_begin, char_offset_end, token_offset_in_doc, \n",
-    "                          sentence_offset, token_offset_in_sent]\n",
-    "            add_token_list(doc_data, linker, token_list)\n",
-    "            \n",
-    "    return {'sentences': sentences} , doc_data\n",
-    "\n",
-    "def constituent_parse_old(sent):\n",
-    "    return nlp.parse(sent).replace('ROOT', \" \").replace('   ', ' ').replace('  ', ' ')"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -563,140 +418,62 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "' '.join([o[0] for o in parse_dict[DocID][\"sentences\"][sent_index]['words']])"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'.START \\n\\nThe following issues were recently filed with the Securities and Exchange Commission: \\n\\nIntermec Corp., offering of 1,050,000 common shares, via Goldman, Sachs & Co. and Piper, Jaffray & Hopwood Inc. \\n\\nMiddlesex Water Co., offering of 150,000 shares of common stock, via Legg Mason Wood Walker Inc. and Howard, Weil, Labouisse, Friedrichs Inc. \\n\\nMidwesco Filter Resources Inc., initial offering of 830,000 common shares, to be offered by the company, via Chicago Corp. \\n\\nNylev Municipal Fund Inc., offering of five million common shares. \\n\\nOccidental Petroleum Corp., shelf offering of $1.5 billion in senior debt securities. \\n\\nPrime Motor Inns Inc., offering of up to $300 million zero coupon convertible debentures, via Drexel Burnham Lambert Inc. and Montgomery Securities. \\n\\nService Fracturing Co., proposed offering of 1.2 million shares of common stock, via Lovett Mitchell Webb & Garrison, Inc., and Blunt Ellis & Loewi Inc. \\n\\nWestern Gas Resources Inc., initial offering of 3,250,000 shares of common stock, of which 3,040,000 shares will be sold by the company and 210,000 shares by a holder, via Prudential-Bache Capital Funding, Smith Barney, Harris Upham & Co., and Hanifen, Imhoff Inc. \\n\\n'"
+       "Index(['Relation', 'Section', 'FileNumber', 'Connective_SpanList',\n",
+       "       'Connective_GornList', 'Connective_Trees', 'Connective_RawText',\n",
+       "       'Connective_StringPosition', 'SentenceNumber', 'ConnHead', 'Conn1',\n",
+       "       'Conn2', 'ConnHeadSemClass1', 'ConnHeadSemClass2', 'Conn2SemClass1',\n",
+       "       'Conn2SemClass2', 'Attribution_Source', 'Attribution_Type',\n",
+       "       'Attribution_Polarity', 'Attribution_Determinacy',\n",
+       "       'Attribution_SpanList', 'Attribution_GornList', 'Attribution_Trees',\n",
+       "       'Attribution_RawText', 'Arg1_SpanList', 'Arg1_GornList', 'Arg1_Trees',\n",
+       "       'Arg1_RawText', 'Arg1_Attribution_Source', 'Arg1_Attribution_Type',\n",
+       "       'Arg1_Attribution_Polarity', 'Arg1_Attribution_Determinacy',\n",
+       "       'Arg1_Attribution_SpanList', 'Arg1_Attribution_GornList',\n",
+       "       'Arg1_Attribution_Trees', 'Arg1_Attribution_RawText', 'Arg2_SpanList',\n",
+       "       'Arg2_GornList', 'Arg2_Trees', 'Arg2_RawText',\n",
+       "       'Arg2_Attribution_Source', 'Arg2_Attribution_Type',\n",
+       "       'Arg2_Attribution_Polarity', 'Arg2_Attribution_Determinacy',\n",
+       "       'Arg2_Attribution_SpanList', 'Arg2_Attribution_GornList',\n",
+       "       'Arg2_Attribution_Trees', 'Arg2_Attribution_RawText', 'Sup1_SpanList',\n",
+       "       'Sup1_GornList', 'Sup1_Trees', 'Sup1_RawText', 'Sup2_SpanList',\n",
+       "       'Sup2_GornList', 'Sup2_Trees', 'Sup2_RawText', 'FullRawText'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rawtext"
+    "pdtb2.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = tokenizor(rawtext.replace('\\n', ''))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for sent in doc.sents:\n",
-    "    a = str(sent._.parse_string)\n",
-    "    sent = (sent)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'(NP (NP (NNP Loewi) (NNP Inc.) (NNP Western) (NNP Gas) (NNPS Resources) (NNP Inc.)) (, ,) (NP (JJ initial) (NN offering)) (PP (IN of) (NP (NP (NP (CD 3,250,000) (NNS shares)) (PP (IN of) (NP (JJ common) (NN stock)))) (, ,) (SBAR (WHPP (IN of) (WHNP (WDT which))) (S (S (NP (NP (CD 3,040,000) (NNS shares))) (VP (MD will) (VP (VB be) (VP (VBN sold) (PP (IN by) (NP (DT the) (NN company))))))) (CC and) (S (NP (NP (CD 210,000) (NNS shares))) (PP (IN by) (NP (DT a) (NN holder)))))))) (, ,) (PP (IN via) (NP (NNP Prudential) (: -) (NNP Bache) (NNP Capital) (NNP Funding)) (, ,) (NP (NNP Smith) (NNP Barney) (, ,) (NNP Harris) (NNP Upham) (CC &) (NNP Co.)) (, ,) (CC and) (NP (NNP Hanifen) (, ,) (NNP Imhoff))) (. Inc.))'"
+       "40600"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Loewi Inc. Western Gas Resources Inc., initial offering of 3,250,000 shares of common stock, of which 3,040,000 shares will be sold by the company and 210,000 shares by a holder, via Prudential-Bache Capital Funding, Smith Barney, Harris Upham & Co., and Hanifen, Imhoff Inc."
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for tok in sent:\n",
-    "    tok = tok"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Inc."
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tok"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'PUNCT'"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tok.pos_"
+    "len(pdtb2)"
    ]
   },
   {
